update hoa don va order dich vu

--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyDatPhongJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyDatPhongJPanel.form
@@ -94,7 +94,7 @@
                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jPanel4" min="-2" pref="81" max="-2" attributes="0"/>
+                      <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane1" pref="520" max="32767" attributes="0"/>
                   </Group>
@@ -128,7 +128,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txtSearch" min="-2" pref="35" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="13" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -597,7 +597,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel19" max="32767" attributes="0"/>
-                                      <Component id="txtNgaySinh" max="32767" attributes="0"/>
+                                      <Component id="txtNgaySinh" pref="20" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
