--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyKhachHangJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyKhachHangJPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
     </Component>
@@ -539,7 +539,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="null"/>
+                    <StringItem index="0" value="T&#x1ea5;t c&#x1ea3;"/>
                     <StringItem index="1" value="Kh&#xe1;ch ch&#x1b0;a thu&#xea;"/>
                     <StringItem index="2" value="Kh&#xe1;ch h&#xe0;ng ti&#x1ec1;m n&#x103;ng"/>
                     <StringItem index="3" value="Kh&#xe1;ch VIP"/>
